Updating the index.html slightly will make more changes tomorrow.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Hielo by TEMPLATED</title>
+		<title>Alexander Mitchell</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -23,8 +23,6 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="generic.html">Generic</a></li>
-					<li><a href="elements.html">Elements</a></li>
 				</ul>
 			</nav>
 
@@ -34,7 +32,7 @@
 					<img src="images/slide01.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<p>A free responsive web site template by <a href="https://templated.co">TEMPLATED</a></p>
+							<p></a></p>
 							<h2>Alexander Mitchell</h2>
 						</header>
 					</div>
@@ -43,8 +41,7 @@
 					<img src="images/slide02.png" alt="" />
 					<div class="inner">
 						<header>
-							<p>Lorem ipsum dolor sit amet nullam feugiat</p>
-							<h2>Magna etiam</h2>
+							<p>Game Developer</p>
 						</header>
 					</div>
 				</article>
@@ -52,8 +49,8 @@
 					<img src="images/slide03.jpg"  alt="" />
 					<div class="inner">
 						<header>
-							<p>Sed cursus aliuam veroeros lorem ipsum nullam</p>
-							<h2>Tempus dolor</h2>
+							<p>Latest Project</p>
+							<h2>FreakReal Estate</h2>
 						</header>
 					</div>
 				</article>
@@ -158,7 +155,7 @@
 					</ul>
 				</div>
 				<div class="copyright">
-					&copy; Untitled. All rights reserved.
+					&copy; A free responsive web site template by <a href="https://templated.co">TEMPLATED
 				</div>
 			</footer>
 
