Deleting redundant images, adding text to index.html

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
 					</div>
 				</article>
 				<article>
-					<img src="images/slide02.png" alt="" />
+					<img src="images/slide02.jpg" alt="" />
 					<div class="inner">
 						<header>
 							<p>Game Developer</p>
+							<h2>Programming</h2>
 						</header>
 					</div>
 				</article>
