--- a/index.html
+++ b/index.html
@@ -31,7 +31,6 @@
 					<img src="images/slide01.jpg" alt="" />
 					<div class="inner">
 						<header>
-							<p></a></p>
 							<h2>Alexander Mitchell</h2>
 						</header>
 					</div>
@@ -68,12 +67,12 @@
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>maecenas sapien feugiat ex purus</p>
-										<h2>Lorem ipsum dolor</h2>
+										<h2>Shield Man</h2>
+										<p>Available on Itch.io</p>
 									</header>
-									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+									<p> Shield Man is an action platformer with a strong focus on speed running and challenge. For this project I worked as a Gameplay and UI programmer.</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="https://shield-man.itch.io/shield-man" class="button alt">Play Now</a>
 									</footer>
 								</div>
 							</div>
@@ -82,16 +81,16 @@
 						<div>
 							<div class="box">
 								<div class="image fit">
-									<img src="images/pic03.jpg" alt="" />
+									<img src="images/pic05.jpg" alt="" />
 								</div>
 								<div class="content">
 									<header class="align-center">
-										<p>mattis elementum sapien pretium tellus</p>
-										<h2>Vestibulum sit amet</h2>
+										<p>Coming Soon</p>
+										<h2>FreakReal Estate</h2>
 									</header>
-									<p> Cras aliquet urna ut sapien tincidunt, quis malesuada elit facilisis. Vestibulum sit amet tortor velit. Nam elementum nibh a libero pharetra elementum. Maecenas feugiat ex purus, quis volutpat lacus placerat malesuada.</p>
+									<p> FreakReal Estate is an up and coming entry level strategy game, which is currently under development by Chatterbox Interactive. My main roles within this project are Gameplay and UI programming as well as performing technical support for the team when they need it</p>
 									<footer class="align-center">
-										<a href="#" class="button alt">Learn More</a>
+										<a href="https://www.facebook.com/Chatterboxinteractive/" class="button alt">Coming Soon</a>
 									</footer>
 								</div>
 							</div>
@@ -105,8 +104,8 @@
 			<section id="two" class="wrapper style3">
 				<div class="inner">
 					<header class="align-center">
-						<p>Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-						<h2>Morbi maximus justo</h2>
+						<p>Personal Projects</p>
+						<h2>Assorted Other Work</h2>
 					</header>
 				</div>
 			</section>
@@ -115,28 +114,28 @@
 			<section id="three" class="wrapper style2">
 				<div class="inner">
 					<header class="align-center">
-						<p class="special">Nam vel ante sit amet libero scelerisque facilisis eleifend vitae urna</p>
-						<h2>Morbi maximus justo</h2>
+						<p class="special">Various Other Games That I have worked on from Game Jams to larger projects.</p>
+						<h2>Available to Play</h2>
 					</header>
 					<div class="gallery">
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://globalgamejam.org/2019/games/make-it"><img src="images/pic01.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic02.jpg" alt="" /></a>
+								<a href="https://shield-man.itch.io/shield-man"><img src="images/pic02.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic03.jpg" alt="" /></a>
+								<a href="https://basiliskstudios.itch.io/nebula-knights"><img src="images/pic03.jpg" alt="" /></a>
 							</div>
 						</div>
 						<div>
 							<div class="image fit">
-								<a href="#"><img src="images/pic04.jpg" alt="" /></a>
+								<a href="https://globalgamejam.org/2017/games/hyper-heatwave-runner"><img src="images/pic04.jpg" alt="" /></a>
 							</div>
 						</div>
 					</div>
@@ -148,9 +147,8 @@
 			<footer id="footer">
 				<div class="container">
 					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="https://www.linkedin.com/in/alexander-mitchell-380130152/" class="icon fa-linkedin"><span class="label">linkedin</span></a></li>
+						<li><a href="https://www.facebook.com/Chatterboxinteractive/" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 				</div>
